--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "author": "Shiko Shintaro",
   "license": "MIT",
   "dependencies": {
+    "@napi-rs/canvas": "^0.1.44",
     "akaneko": "^5.2.3",
     "ascii-table": "^0.0.9",
+    "canvacord": "^5.4.10",
     "discord.js": "^14.12.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
