--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "shikodiscord",
   "version": "2.0.0",
   "description": "",
-  "main": "shiko-main.js",
+  "main": "src/main/shiko-main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node shiko-main.js"
+    "start": "node src/main/shiko-main.js"
   },
   "keywords": [
     "shiko",
